이미지 오류 수정

--- a/src/main/webapp/css/info/diagnosticEquipmentSystem.css
+++ b/src/main/webapp/css/info/diagnosticEquipmentSystem.css
@@ -71,6 +71,10 @@
     letter-spacing: -1.5px;
 }
 
+.slick-slide img.display-none {
+    display: none;
+}
+
 .section01 .slider-pagenation .slick-active .bx-pager-item .label:before {
     position: absolute;
     bottom: 0;
