모바일에서 이미지 안 보이는 문제 수정

--- a/src/main/webapp/css/info/diagnosticEquipmentSystem.css
+++ b/src/main/webapp/css/info/diagnosticEquipmentSystem.css
@@ -570,7 +570,7 @@
     .section01 .slider, .section01 .slick-slider .slick-list {
         height: auto;
     }
-    .slick-slide img {
+    .slick-slide img.display-none {
         display: block;
         width: 100%;
     }
