--- a/src/main/webapp/css/info/competitiveness.css
+++ b/src/main/webapp/css/info/competitiveness.css
@@ -620,64 +620,64 @@ section {
 
 @media screen and (max-width: 640px) {
     .tabs {
-    margin-top: 45px;
-}
+        margin-top: 45px;
+    }
 
     .tab {
-    font-size: 16px;
-}
+        font-size: 16px;
+    }
 
 
     .default-tab {
-    margin-top: 40px;
-}
+        margin-top: 40px;
+    }
 
     .tab-contents {
-    height: 0;
-    font-size: 28px;
-    /* line-height: 1.4; */
-    opacity: 0;
-    transition: none;
-    color: #fff;
-    letter-spacing: -2px;
-    font-family: KCC !important;
-}
+        height: 0;
+        font-size: 28px;
+        /* line-height: 1.4; */
+        opacity: 0;
+        transition: none;
+        color: #fff;
+        letter-spacing: -2px;
+        font-family: KCC !important;
+    }
 
 
     .section04 .section-sub-title {
-    font-size: 19px;
+        font-size: 19px;
 
-}
+    }
 
     .section04 {
-    padding: 79px 0 70px 0;
-}
+        padding: 79px 0 70px 0;
+    }
 
     .section-title {
-    line-height: 1.2;
-    /* letter-spacing: -1.8px; */
-    /* padding-bottom: 21px; */
-    font-size: 28px;
-}
+        line-height: 1.2;
+        /* letter-spacing: -1.8px; */
+        /* padding-bottom: 21px; */
+        font-size: 28px;
+    }
 
     .section03 .move-title {
-    margin-bottom: 17px;
-    color: #ffffff;
-    letter-spacing: 2px;
-    font-weight: 800;
-    font-family: Caveat !important;
-    opacity: 0.1;
-    font-size: 38px;
-    margin-top: -17px;
-    line-height: 1.1;
-}
+        margin-bottom: 17px;
+        color: #ffffff;
+        letter-spacing: 2px;
+        font-weight: 800;
+        font-family: Caveat !important;
+        opacity: 0.1;
+        font-size: 38px;
+        margin-top: -17px;
+        line-height: 1.1;
+    }
     .section02 {
-    margin-top: 20px;
-    padding-bottom: 32px;
-}
-.section01 {
-    margin-top: 40px;
-}
+        margin-top: 20px;
+        padding-bottom: 32px;
+    }
+    .section01 {
+        margin-top: 40px;
+    }
     .section03 .image_box_right {
         top: 347px;
     }
@@ -739,7 +739,12 @@ section {
 }
 
 @media screen and (max-width: 414px) {
-    
+
+    .section01 .img01 .img {
+        background: url(../../images/sub/info/competitiveness/compet01_m.png) no-repeat center;
+    }
+
+
     .section03 .img-box .img {
         height: 135px;
     }
