--- a/src/main/webapp/css/clientSubNav.css
+++ b/src/main/webapp/css/clientSubNav.css
@@ -156,29 +156,60 @@
 .mobile-category {
     display: none;
 }
-.top {
+.top-container.active {
+    opacity: 1;
+}
+.top-container {
+    display: block;
     position: fixed;
-    bottom: 50px;
-    right: 50px;
+    width: 82px;
+    height: 100%;
+    right: 0;
+    top: 0;
+    box-sizing: border-box;
+    padding: 81px 0 0;
+    z-index: 100000;
+    opacity: 0;
+    transition: opacity .3s ease;
+}
+.top-box {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.top-top {
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(190px);
+    height: 113px;
+    position: absolute;
+    width: 48px;
+}
+.top {
     z-index: 11111111;
     cursor: pointer;
-    width: 70px;
-    height: 70px;
+    width: 48px;
+    height: 48px;
     background: rgba(0,0,0,0.7);
-    line-height: 91px;
+    line-height: 61px;
     text-align: center;
     border-radius: 100%;
     color: #fff;
-    font-size: 12px;
+    font-size: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
 .top:before {
     position: absolute;
     content: '';
     background: url(../images/cmmn/top.png) no-repeat top center;
-    width: 70px;
-    height: 12px;
+    width: 48px;
+    height: 8px;
     left: 0;
-    top: 20px;
+    top: 12px;
+    background-size: contain;
 }
 @media screen and (max-width: 850px) {
     .mobile-category {
