--- a/src/main/webapp/css/info/directions.css
+++ b/src/main/webapp/css/info/directions.css
@@ -62,14 +62,14 @@
 
 .section03 {
     width: 100%;
-    height: 645px;
+    height: 613px;
 }
 
 .section03 .bg {
     width: 100%;
-    /* height: 100%; */
+    height: 100%;
     background: url(../../images/sub/info/directions/location_bg.jpg) center top no-repeat fixed;
-    padding-top: 115px;
+    padding-top: 93px;
     box-sizing: border-box;
     text-align: center;
 }
@@ -231,7 +231,7 @@ li:before {
         height: 265px;
     }
     .section04 .title {
-        padding-left: 74px;
+        padding-left: 70px;
         font-size: 28px;
         margin-bottom: 30px;
     }
@@ -280,7 +280,10 @@ li:before {
     margin-bottom: 17px;
     letter-spacing: -2px;
 }
-
+.section03 {
+    width: 100%;
+    height: 378px;
+}
 
 }
 
