--- a/src/main/webapp/css/info/diagnosticEquipmentSystem.css
+++ b/src/main/webapp/css/info/diagnosticEquipmentSystem.css
@@ -483,6 +483,14 @@
 }
 
 @media screen and (max-width: 640px) {
+
+    .section03 .img {
+    width: 91%;
+    margin: 0 30px;
+    box-sizing: border-box;
+    height: 210px;
+    margin-top: -11px;
+}
     .section01 {
     display: inline-block;
     width: 100%;
@@ -566,9 +574,17 @@
 }
 
 .section03 {
-    padding-bottom: 500px;
+    padding-bottom: 349px;
     background: #f1f1f1;
     padding-top: 60px;
+}
+
+.section03 .bg {
+    left: 0;
+    width: 100%;
+    height: 226px;
+}
+
 }
 
 @media screen and (max-width: 640px)  {
@@ -576,7 +592,7 @@
         display: block;
     }
     .section03 .image_box_left {
-        top: 330px;
+        top: 312px;
     }
 }
 
