--- a/src/main/webapp/css/info/diagnosticEquipmentSystem.css
+++ b/src/main/webapp/css/info/diagnosticEquipmentSystem.css
@@ -489,7 +489,7 @@
     margin: 0 30px;
     box-sizing: border-box;
     height: 210px;
-    margin-top: -11px;
+    margin-top: -14px;
 }
     .section01 {
     display: inline-block;
@@ -574,15 +574,19 @@
 }
 
 .section03 {
-    padding-bottom: 349px;
+    padding-bottom: 337px;
     background: #f1f1f1;
-    padding-top: 60px;
+    padding-top: 57px;
 }
 
 .section03 .bg {
     left: 0;
     width: 100%;
     height: 226px;
+}
+
+.section03 .section-text {
+    margin-top: -2px;
 }
 
 }
@@ -592,7 +596,7 @@
         display: block;
     }
     .section03 .image_box_left {
-        top: 312px;
+        top: 296px;
     }
 }
 
