--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -2439,7 +2439,7 @@ body .section07 .bx-pager-link span + span {
     }
 
     .section07 .max-layout-width:first-child {
-        padding-top: 81px;
+        padding-top: 75px;
         margin-bottom: 0;
     }
     .section07 .max-layout-width {
@@ -2586,7 +2586,7 @@ body .section07 .bx-pager-link span + span {
 
     .section04 .text {
         text-align: center;
-        padding-top: 101px;
+        padding-top: 58px;
     }
 
     .section04 .bx-wrapper {
@@ -2731,8 +2731,12 @@ body .section07 .bx-pager-link span + span {
 }
 
 @media screen and (max-width: 640px) {
+
+    .case .max-layout-width {
+    padding-top: 20px;
+}
     .section09 .max-layout-width {
-        padding-top: 62px;
+        padding-top: 57px;
     }
     .section05 .big-img .cont01 .img {
         background: url(../images/main/docter03_m.jpg) no-repeat;
@@ -2875,6 +2879,7 @@ body .section07 .bx-pager-link span + span {
         width: 26px;
         height: 5px;
     }
+
 }
 
 @media screen and (max-width:550px) {
@@ -3145,7 +3150,7 @@ body .section07 .bx-pager-link span + span {
         height: 166px;
     }
     .community .etc ul li {
-        height: 62px;
+        height: 61px;
     }
     .community .etc ul li a {
         padding: 20px 24px;
@@ -3394,6 +3399,14 @@ body .section07 .bx-pager-link span + span {
 }
 
 @media screen and (max-width: 375px) {
+        .section02 .bg {
+    bottom: 21px;
+    height: 337px;
+}
+.section04 .text {
+    text-align: center;
+    padding-top: 30px;
+}
     .section02 li {
         height: 154.48px;
     }
